<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUpStudents">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_chevron_left_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/btnCancel"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="24dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/registrationForm"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/pleaseFillThisForm"
            android:textColor="@color/colorBlack"
            android:textSize="12dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nimStudentsError_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nimStudents_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/nim"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstnameStudentsError_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstnameStudents_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/firstname"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastnameStudentsError_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastnameStudents_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/lastname"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailStudentsError_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailStudents_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/facultyStudentserror_id"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="5dp">-->

<!--                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner-->
<!--                        android:id="@+id/facultyStudents_id"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:hint="@string/faculty"-->
<!--                        android:inputType="textEmailAddress"-->
<!--                        android:maxLines="1"-->
<!--                        android:paddingStart="5dp"-->
<!--                        android:singleLine="true" />-->

<!--                </com.google.android.material.textfield.TextInputLayout>-->

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/sectionStudentsError_id"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="5dp">-->

<!--                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner-->
<!--                        android:id="@+id/sectionStudents_id"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:hint="@string/section"-->
<!--                        android:inputType="textEmailAddress"-->
<!--                        android:maxLines="1"-->
<!--                        android:paddingStart="5dp"-->
<!--                        android:singleLine="true" />-->

<!--                </com.google.android.material.textfield.TextInputLayout>-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordStudentsError_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordStudents_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnsign_up_with_email_students_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@color/colowBoldOrange"
            android:text="@string/signUp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>